# approx-designer

./: Cargo.toml  LICENSE  README.md
crates/approx-designer/: Cargo.toml
crates/approx-designer/src/: main.rs
crates/approximate/: Cargo.toml
crates/approximate/benches/: cheby.rs
crates/approximate/examples/: floats.rs
crates/approximate/src/: cheby.rs  lib.rs
