[package]
name = "approx-designer"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
approximate = { workspace = true }

eframe = { workspace = true }
egui_plot = { workspace = true }
egui_tiles = { workspace = true }
