[package]
name = "approximate"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[[bench]]
name = "cheby"
harness = false

[dependencies]
rustversion = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = ["std"]
std = []
